# probe-lab

./: DESIGN.md  README.md  pyproject.toml
src/probe_lab/: __init__.py  extract.py  prompts.py
tests/: test_extract.py  test_prompts.py
