[project]
name = "probe-lab"
version = "0.1.0"
description = "Activation probing toolkit: parquet prompts -> residual activations -> linear probes"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "model: test loads a real model (slower; deselect with -m 'not model')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
